lambda-appsync-proc/tests/fail/invalid_type_field_override.stderr
error[E0412]: cannot find type `NonExistentType` in this scope
 --> tests/fail/invalid_type_field_override.rs:7:38
  |
7 |     field_type_override = Player.id: NonExistentType,
  |                                      ^^^^^^^^^^^^^^^ not found in this scope
